--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,17 @@
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Poppins&display=swap");
-
+@import"https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300..900&display=swap";@import"https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0";:root {
+    --bg-color: #f5f5f5;
+    --color-on-dark: #fff;
+    --light-font-color: #696969;
+    --dark-font-color: #2b2b2b;
+    --list-spacing: 6px;
+    --button-bg-color: rgba(0,0,0,.12);
+    --button-bg-color-hover: #000;
+    --gradient-background-start: #c8c8dc;
+    --gradient-background-end: #171a31;
+    --gradient-top-start: rgba(76,75,90,0);
+    --gradient-top-end: rgba(70,30,150,.5);
+    --box-gradient: linear-gradient(90deg,#fff,hsla(0,0%,100%,.95))
+  }
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
