--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+ 
+}
+
+html, body {
+ /* @apply bg-black text-white;*/
+  overflow-x: hidden;
+  scrollbar-width: thin;
+  scrollbar-color: #48beaa rgba(0, 0, 0, 0.1);
+}
+
+body {
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.canvas-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+}
