--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+#root {
+  width: 100vw;
+  height: 100vh;
+  background-color: #d9afd9;
+  background-image: linear-gradient(0deg, #d9afd9 0%, #97d9e1 100%);
+}
 
 .app-container {
   position: relative;
@@ -30,8 +36,6 @@
     }
   }
 body {
- 
-
   margin: 0px;
   padding: 0px;
   min-height: -webkit-fill-available;
@@ -154,3 +158,45 @@ needle-engine.presentation-mode .hide-in-presentation {
 needle-engine canvas {
   touch-action: pan-y!important
 }
+
+
+.loading {
+  padding: 1rem 2rem;
+  background-color: rgba(22, 33, 62, 0.8);
+  color: white;
+  border-radius: 8px;
+  font-size: 16px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+
+a,a:visited {
+  border-radius: 1em;
+  text-decoration: none
+}
+
+button {
+  border: none;
+  border-radius: .3em;
+  color: #000000e6;
+  cursor: pointer;
+  font-size: inherit;
+  padding: .4em;
+  pointer-events: all
+}
+
+video {
+  height: auto;
+  max-width: 100%
+}
+
+@media screen and (max-width: 900px) {
+  .hide-on-mobile {
+      display:none
+  }
+}
+
+.soft-box-shadow {
+  box-shadow: 0 2px 15px #02022b33
+}
+
