--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 #root {
   width: 100vw;
   height: 100vh;
-  background-color: #d9afd9;
-  background-image: linear-gradient(0deg, #d9afd9 0%, #97d9e1 100%);
+  background-color: #8ecac6;
+  background-image: linear-gradient(0deg, #8ecac6 0%, #00C9B7 100%);
 }
 
 .app-container {
