--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@
 
 html, body {
   overflow-x: hidden;
-  overflow-y: hidden;
+  /*overflow-y: hidden;*/
   scrollbar-width: thin;
   scrollbar-color: #48beaa rgba(0, 0, 0, 0.1);
 }
