--- a/src/index.css
+++ b/src/index.css
@@ -1,37 +1,53 @@
-@import"https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300..900&display=swap";@import"https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0";:root {
-    --bg-color: #f5f5f5;
-    --color-on-dark: #fff;
-    --light-font-color: #696969;
-    --dark-font-color: #2b2b2b;
-    --list-spacing: 6px;
-    --button-bg-color: rgba(0,0,0,.12);
-    --button-bg-color-hover: #000;
-    --gradient-background-start: #c8c8dc;
-    --gradient-background-end: #171a31;
-    --gradient-top-start: rgba(76,75,90,0);
-    --gradient-top-end: rgba(70,30,150,.5);
-    --box-gradient: linear-gradient(90deg,#fff,hsla(0,0%,100%,.95))
-  }
+@import"https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300..900&display=swap";
+@import"https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0";
+
+:root {
+  --bg-color: #f5f5f5;
+  --color-on-dark: #fff;
+  --light-font-color: #696969;
+  --dark-font-color: #2b2b2b;
+  --list-spacing: 6px;
+  --button-bg-color: rgba(0, 0, 0, .12);
+  --button-bg-color-hover: #000;
+  --gradient-background-start: #c8c8dc;
+  --gradient-background-end: #171a31;
+  --gradient-top-start: rgba(76, 75, 90, 0);
+  --gradient-top-end: rgba(70, 30, 150, .5);
+  --box-gradient: linear-gradient(90deg, #fff, hsla(0, 0%, 100%, .95))
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 
-:root {
- 
-}
+:root {}
 
-html, body {
-  overflow-x: hidden;
-  /*overflow-y: hidden;*/
-  scrollbar-width: thin;
-  scrollbar-color: #48beaa rgba(0, 0, 0, 0.1);
+html {
+  height: -webkit-fill-available;
 }
 
 body {
-  margin: 0;
+  background: linear-gradient(90deg, rgb(153, 213, 255) 30%, rgb(99, 194, 253));
+  margin: 0px;
+  padding: 0px;
+  min-height: -webkit-fill-available;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  width: 100%;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Nunito Sans", sans-serif;
+  scrollbar-width: thin;
+}
+
+.pages-gradient {
+  background: linear-gradient(90deg, #99d5ff 30%, rgb(99, 194, 253));
+  bottom: 0;
+  height: 100%;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 .canvas-container {
@@ -41,6 +57,168 @@ body {
   width: 100%;
   height: 100vh;
 }
+
+
+
+/* Main block styling */
+div.block {
+  color: #fff;
+  margin: 7em 40vw 50vh calc(100% - 440px - 12vw);
+  pointer-events: none;
+  position: relative;
+  right: 0;
+  top: 12vh;
+  width: 440px;
+  z-index: 25;
+}
+
+/* Glassmorphism effect */
+div.block:before {
+  --offset: 30px;
+  backdrop-filter: blur(40px) saturate(1.4);
+  background-color: #66666624;
+  border-radius: 40px;
+  box-shadow: 0 0 20px #5e5e5e38;
+  content: "";
+  height: calc(100% + var(--offset)*2);
+  left: calc(var(--offset)*-1);
+  outline: 1px solid #ffffff2b;
+  position: absolute;
+  top: calc(var(--offset)*-1);
+  width: calc(100% + var(--offset)*2);
+}
+
+.wrapper {
+  pointer-events: auto;
+  transform: perspective(0) translateZ(0);
+  transition: .1s ease-in;
+}
+
+
+
+header {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.category {
+  font-size: 1em;
+  font-weight: 400;
+  letter-spacing: 1px;
+  margin: 0 0 -.7em;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+/* Content paragraphs */
+p {
+  font-size: 1.2em;
+  font-weight: 400;
+  line-height: 1.35em;
+  margin-bottom: 1em;
+  margin-top: 1em;
+}
+
+.small-margin {
+  margin-bottom: .5em;
+  margin-top: 1.5em;
+}
+
+/* Buttons 
+a {
+  background-color: #fff3;
+  border: 1px solid hsla(0, 0%, 100%, .3);
+  border-radius: 30px;
+  box-shadow: 0 0 2px #00000080;
+  color: #fff;
+  display: inline-block;
+  font-size: 1em;
+  font-weight: 700;
+  margin: .5em .5em .5em 0;
+  padding: .5em 1em;
+  pointer-events: auto;
+  text-decoration: none;
+  transition: all .1s ease-out;
+}
+
+a.inverted {
+  background-color: #fffc;
+  color: #000;
+  padding: .3em .8em;
+}
+
+a.inverted img {
+  height: 1.4em;
+}
+
+a:hover {
+  box-shadow: 0 5px 20px #0003;
+  transform: translateY(-2px);
+}*/
+
+div[data-v-7479a2c4] {
+  align-items: center;
+  display: flex;
+  gap: .5em;
+}
+/* Typography */
+.block h1 {
+  font-size: 3em;
+  font-weight: 700;
+  line-height: 1.05em;
+  margin-bottom: .4em;
+  margin-top: .4em;
+   min-height: '2.5em';
+            display: 'flex';
+            align-items: 'center';
+}
+/* Responsive design */
+@media screen and (max-height: 1200px) {
+  .block {
+    margin-left: auto;
+    top: 7vh;
+  }
+}
+
+@media screen and (min-width: 1900px) {
+  .block {
+    max-width: 520px;
+    right: 0;
+    width: 30%;
+  }
+
+  .block h1 {
+    font-size: 3.3em;
+    line-height: 1em;
+    
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .block {
+    min-width: auto;
+    top: 5.5vh;
+  }
+
+  .block h1 {
+    font-size: 1.8em;
+  }
+
+  p {
+    font-size: 1.1em;
+  }
+}
+
+@media screen and (max-aspect-ratio: 1/1) {
+  div.block {
+    margin-bottom: 60vh;
+    margin-left: auto;
+    max-width: min(600px, calc(100vw - 60px));
+    padding: 0 30px;
+    top: 6em;
+  }
+}
+
 canvas {
   will-change: transform;
 }
