--- a/src/index.css
+++ b/src/index.css
@@ -33,12 +33,18 @@ body {
   padding: 0px;
   min-height: -webkit-fill-available;
   overflow-x: hidden;
-  
+  overflow-y: hidden;
   width: 100%;
   -webkit-font-smoothing: antialiased;
   font-family: "Nunito Sans", sans-serif;
   scrollbar-width: thin;
 }
+@media (max-width: 768px) {
+  body {
+    overflow-y: auto; /* ✅ active le scroll vertical uniquement sur mobile */
+  }
+}
+
 
 .pages-gradient {
   background: linear-gradient(90deg, #99d5ff 30%, rgb(99, 194, 253));
