--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-@import"https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300..900&display=swap";
-@import"https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0";
 
 :root {
   --bg-color: #f5f5f5;
@@ -19,9 +17,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@font-face {
+  font-family: 'Nunito Sans';
+  font-display: swap;
+}
+p {
+  animation: none !important;
+  opacity: 1 !important;
+}
 
 
-:root {}
+.lcp-paragraph {
+  font-display: swap;
+  opacity: 1;
+  animation: none;
+}
 
 html {
   height: -webkit-fill-available;
@@ -134,7 +144,12 @@ div.block2::before {
   transform: perspective(0) translateZ(0);
   transition: .1s ease-in;
 }
-
+.wrapper p {
+  font-size: 1.1em;
+  line-height: 1.35em;
+  color: white;
+  margin: 1.5em 0 1em;
+}
 
 
 header {
