--- a/src/index.css
+++ b/src/index.css
@@ -91,7 +91,7 @@ div.block {
   position: relative;
   right: 0;
   top: 12vh;
-  width: 440px;
+  width: 500px;
   z-index: 25;
 }
 
@@ -148,10 +148,10 @@ div.block2::before {
   transition: .1s ease-in;
 }
 .wrapper p {
-  font-size: 1.1em;
+  font-size: 1.4em;
   line-height: 1.35em;
   color: white;
-  margin: 1.5em 0 1em;
+  margin: 1em 0 .9em;
 }
 
 
@@ -225,8 +225,8 @@ div[data-v-7479a2c4] {
   font-size: 3em;
   font-weight: 700;
   line-height: 1.05em;
-  margin-bottom: .4em;
-  margin-top: .4em;
+  margin-bottom: .1em;
+  margin-top: .1em;
    min-height: '2.5em';
             display: 'flex';
             align-items: 'center';
@@ -260,7 +260,7 @@ div[data-v-7479a2c4] {
   }
 
   .block h1,.block2 h1 {
-    font-size: 1.8em;
+    font-size: 2.7em;
   }
 
   p {
