--- a/src/index.css
+++ b/src/index.css
@@ -340,6 +340,9 @@ div[data-v-7479a2c4] {
     padding: 0;
     top: 0em;
   }
+      div.block::before {
+        border-radius: 0;
+    }
   .wrapper p {
     font-size: 1.1em;
         margin: 0.7em 0 .5em;
