--- a/src/index.css
+++ b/src/index.css
@@ -359,6 +359,25 @@ div[data-v-7479a2c4] {
 canvas {
   will-change: transform;
 }
+#tsparticles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+#tsparticles2 {
+  position: absolute;
+  top: -00;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+#tsparticles3 {
+  z-index: -2;
+}
 
 @keyframes float {
   0% {
